Add header layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digiday</title>
 </head>
-<body>
-    
+
+<body style="background-color: beige;">
+    <header class="header">
+        <img src="./img/logo.png" width="203" height="40" alt="Digiday">
+        <h1 class="header__title">
+            Gain an edge, make smarter decisions.
+            <i class="header__title header__title--italic">Subscribe now to get unlimited access to our digital
+                content.</i>
+        </h1>
+        <label class="header__switch">
+            <input type="checkbox" checked />
+            <span>
+                <span>Individual membership</span>
+                <span>group membership</span>
+            </span>
+        </label>
+        <ul class="header__subscription-items">
+            <li class="header__subscription__item">
+                <div class="header__subscription-card subscription-card">
+                    <h3 class="subscription-card__title">
+                        Quartely
+                    </h3>
+                    <p class="subscription-card__price">$159</p>
+                    <i class="subscription-card__discription">This subscription is billed every three months</i>
+                    <a href="#" class="subscription-card__button">Subscribe</a>
+                </div>
+            </li>
+            <li class="header__subscription__item">
+                <div class="header__subscription-card subscription-card">
+                    <h3 class="subscription-card__title">
+                        Annual
+                    </h3>
+                    <p class="subscription-card__price">$395</p>
+                    <i class="subscription-card__discription">This subscription is
+                        billed annually</i>
+                    <a href="#" class="subscription-card__button">Subscribe</a>
+                </div>
+            </li>
+            <li class="header__subscription__item">
+                <div class="header__subscription-card subscription-card">
+                    <h3 class="subscription-card__title">
+                        Two Year
+                    </h3>
+                    <p class="subscription-card__price">$649</p>
+                    <i class="subscription-card__discription">Billed annually, then at a discount after two years</i>
+                    <a href="#" class="subscription-card__button">Subscribe</a>
+                </div>
+            </li>
+        </ul>
+        <div class="header__options">
+            <p class="header__option-items">
+                Do you work for a nonprofit?
+                <a class="header__option-item header__option-item--link" href="#">
+                    View nonprofit options
+                </a>
+            </p>
+            <p class="header__option-item">
+                Are you a student?
+                <a class="header__option-item header__option-item--link" href="#">
+                    View student options
+                </a>
+            </p>
+        </div>
+        <div class="header__benefits benefits">
+            <h2 class="benefits__title">Get access to these Digiday+ member benefits. <a href="#"
+                    class="benefits__title benefits__title--link">Learn more</a></h2>
+            <ul class="benefits__items">
+                <li class="benefits_item">Member Exclusives</li>
+                <li class="benefits_item">Reports and Guides</li>
+                <li class="benefits_item">Premium Research</li>
+                <li class="benefits_item">Live Digital Events</li>
+                <li class="benefits_item">Unlimited stories</li>
+            </ul>
+        </div>
+    </header>
 </body>
+
 </html>
