Add main layout

--- a/index.html
+++ b/index.html
@@ -82,6 +82,114 @@
             </ul>
         </div>
     </header>
+
+    <main class="main">
+        <section class="main__features features">
+            <ul class="features__items">
+                <li class="features__item">
+                    <h3 class="features__title">Member Exclusives</h3>
+                    <p class="features__description">Weekly columns from top editors breaking down key issues in media,
+                        marketing and the future of TV and early access to lead stories.
+                    </p>
+                    <a class="features__link">View a sample</a>
+                </li>
+                <li class="features__item">
+                    <h3 class="features__title">Reports & Guides</h3>
+                    <p class="features__description">
+                        Practical guides and explainers to help easily navigate complex and evolving industry dynamics.
+                    </p>
+                    <a class="features__link">View a sample</a>
+                </li>
+                <li class="features__item">
+                    <h3 class="features__title">Premium research</h3>
+                    <p class="features__description">
+                        Original research, charts and in-depth reports based on unique data collected from our
+                        proprietary audience of publisher, agency and brand insiders.
+                    </p>
+                    <a class="features__link">View a sample</a>
+                </li>
+                <li class="features__item">
+                    <h3 class="features__title">Live Digital Events</h3>
+                    <p class="features__description">
+                        Online Plus Talks featuring conversations with industry leaders across media, marketing,
+                        branding industries, virtual networking opportunities and access to video archives.
+                    </p>
+                    <a class="features__link">View a sample</a>
+                </li>
+                <li class="features__item">
+                    <h3 class="features__title">Unlimited stories</h3>
+                    <p class="features__description">
+                        Full access to all content published on Digiday. Non-members are limited to 3 articles each
+                        month.
+                    </p>
+                    <a class="features__link">View a sample</a>
+                </li>
+            </ul>
+        </section>
+        <section class="main__faq faq">
+            <h2 class="faq__title">Frequently Asked Questions</h2>
+            <ul class="faq__items">
+                <li class="faq__item">
+                    What type of memberships are offered?
+                </li>
+                <li class="faq__item">
+                    How can I obtain a plus membership receipt?
+                </li>
+                <li class="faq__item">
+                    How can I upgrade my membership?
+                </li>
+                <li class="faq__item">
+                    How do I access previous print magazines?
+                </li>
+                <li class="faq__item">
+                    What are the options for student memberships?
+                </li>
+                <li class="faq__item">
+                    What is our cancellation and refund policy? 
+                </li>
+            </ul>
+        </section>
+        <section class="main__members members">
+            <h2 class="members__title">
+                Join thousands of members gaining an edge with Digiday+
+            </h2>
+            <ul class="members__items">
+                <li class="members__item">
+                    <img class="members__image" src="./img/bloomberg.png" srcset="./img/bloomberg@2x.png 2x" width="98" height="18" alt="Bloomberg">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/viacom.png" srcset="./img/viacom@2x.png 2x" width="94" height="14" alt="Viacom">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/nyt.png" srcset="./img/nyt@2x.png 2x" width="173" height="25" alt="The New York Times">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/hearst.png" srcset="./img/hearst@2x.png 2x" width="142" height="18" alt="Hearst">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/facebook.png" srcset="./img/facebook@2x.png 2x" width="112" height="23" alt="Facebook">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/pub_groupe.png" srcset="./img/pub_groupe@2x.png 2x" width="52" height="51" alt="Publicis groupe">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/condenast.png" srcset="./img/condenast@2x.png 2x" width="151" height="20" alt="Conde Nast">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/disney.png" srcset="./img/disney@2x.png 2x" width="81" height="34" alt="Disney">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/google.png" srcset="./img/google@2x.png 2x" width="86" height="29" alt="Google">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/timeinc.png" srcset="./img/timeinc@2x.png 2x" width="108" height="21" alt="TimeInc.">
+                </li>
+                <li class="members__item">
+                    <img class="members__image" src="./img/amazon.png" srcset="./img/amazon@2x.png 2x" width="77" height="23" alt="Amazon">
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
