Delete inline style for body

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Digiday</title>
 </head>
 
-<body style="background-color: beige;">
+<body>
     <header class="header">
         <img src="./img/logo.png" width="203" height="40" alt="Digiday">
         <h1 class="header__title">
