--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <img src="./img/logo.png" width="203" height="40" alt="Digiday">
+        <img class="header__logo" src="./img/logo.png" width="203" height="40" alt="Digiday">
         <h1 class="header__title">
             Gain an edge, make smarter decisions.
             <i class="header__title header__title--italic">Subscribe now to get unlimited access to our digital
