Change italic modificator

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="header__logo" src="./img/logo.png" width="203" height="40" alt="Digiday">
         <h1 class="header__title">
             Gain an edge, make smarter decisions.
-            <i class="header__title header__title--italic">Subscribe now to get unlimited access to our digital
+            <i class="header__title header__title--accent">Subscribe now to get unlimited access to our digital
                 content.</i>
         </h1>
         <label class="header__switch">
