--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
             <i class="header__title header__title--accent">Subscribe now to get unlimited access to our digital
                 content.</i>
         </h1>
-        <label class="header__switch">
-            <input type="checkbox" checked />
-            <span>
-                <span>Individual membership</span>
-                <span>group membership</span>
-            </span>
-        </label>
+            <div class="header__switch">
+                <button class="header__switch-button header__switch-button--left" type="button">Individual membership</button>
+                <button class="header__switch-button header__switch-button--right" type="button">group membership</button>
+            </div>
         <ul class="header__subscription-items">
             <li class="header__subscription__item">
                 <div class="header__subscription-card subscription-card">
