Change benefits link class

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </p>
         </div>
         <div class="header__benefits benefits">
-            <h2 class="benefits__title">Get access to these Digiday+ member benefits. <a href="#"
-                    class="benefits__title benefits__title--link">Learn more</a></h2>
+            <h2 class="benefits__title">Get access to these Digiday+ member benefits.</h2>
+            <a href="#" class="benefits__link">Learn more</a>
             <ul class="benefits__items">
                 <li class="benefits_item">Member Exclusives</li>
                 <li class="benefits_item">Reports and Guides</li>
