Fix double podzopnik

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             <h2 class="benefits__title">Get access to these Digiday+ member benefits.</h2>
             <a href="#" class="benefits__link">Learn more</a>
             <ul class="benefits__items">
-                <li class="benefits_item">Member Exclusives</li>
-                <li class="benefits_item">Reports and Guides</li>
-                <li class="benefits_item">Premium Research</li>
-                <li class="benefits_item">Live Digital Events</li>
-                <li class="benefits_item">Unlimited stories</li>
+                <li class="benefits__item">Member Exclusives</li>
+                <li class="benefits__item">Reports and Guides</li>
+                <li class="benefits__item">Premium Research</li>
+                <li class="benefits__item">Live Digital Events</li>
+                <li class="benefits__item">Unlimited stories</li>
             </ul>
         </div>
     </header>
