--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
             </li>
         </ul>
         <div class="header__options">
-            <p class="header__option-items">
+            <p class="header__options-items">
                 Do you work for a nonprofit?
-                <a class="header__option-item header__option-item--link" href="#">
+                <a class="header__options-item header__options-item--link" href="#">
                     View nonprofit options
                 </a>
             </p>
-            <p class="header__option-item">
+            <p class="header__options-item">
                 Are you a student?
-                <a class="header__option-item header__option-item--link" href="#">
+                <a class="header__options-item header__options-item--link" href="#">
                     View student options
                 </a>
             </p>
