Add options link class

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <div class="header__options">
             <p class="header__options-items">
                 Do you work for a nonprofit?
-                <a class="header__options-item header__options-item--link" href="#">
+                <a class="header__options-link" href="#">
                     View nonprofit options
                 </a>
             </p>
             <p class="header__options-item">
                 Are you a student?
-                <a class="header__options-item header__options-item--link" href="#">
+                <a class="header__options-link" href="#">
                     View student options
                 </a>
             </p>
