--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button class="header__switch-button header__switch-button--left" type="button">Individual membership</button>
                 <button class="header__switch-button header__switch-button--right" type="button">group membership</button>
             </div>
-        <ul class="header__subscription-items">
+        <ul class="header__subscription-list">
             <li class="header__subscription-item">
                 <div class="header__subscription-card subscription-card">
                     <h3 class="subscription-card__title">
@@ -54,7 +54,7 @@
             </li>
         </ul>
         <div class="header__options">
-            <p class="header__options-items">
+            <p class="header__options-list">
                 Do you work for a nonprofit?
                 <a class="header__options-link" href="#">
                     View nonprofit options
@@ -68,9 +68,12 @@
             </p>
         </div>
         <div class="header__benefits benefits">
-            <h2 class="benefits__title">Get access to these Digiday+ member benefits.</h2>
-            <a href="#" class="benefits__link">Learn more</a>
-            <ul class="benefits__items">
+            <h2 class="benefits__title">
+                Get access to these Digiday+ member benefits. 
+                <a href="#" class="benefits__link">Learn more</a>
+            </h2>
+
+            <ul class="benefits__items-list">
                 <li class="benefits__item">Member Exclusives</li>
                 <li class="benefits__item">Reports and Guides</li>
                 <li class="benefits__item">Premium Research</li>
@@ -82,7 +85,7 @@
 
     <main class="main">
         <section class="main__features features">
-            <ul class="features__items">
+            <ul class="features__items-list">
                 <li class="features__item">
                     <h3 class="features__title">Member Exclusives</h3>
                     <p class="features__description">Weekly columns from top editors breaking down key issues in media,
@@ -125,7 +128,7 @@
         </section>
         <section class="main__faq faq">
             <h2 class="faq__title">Frequently Asked Questions</h2>
-            <ul class="faq__items">
+            <ul class="faq__items-list">
                 <li class="faq__item">
                     What type of memberships are offered?
                 </li>
@@ -150,7 +153,7 @@
             <h2 class="members__title">
                 Join thousands of members gaining an edge with Digiday+
             </h2>
-            <ul class="members__items">
+            <ul class="members__items-list">
                 <li class="members__item">
                     <img class="members__image" src="./img/bloomberg.png" srcset="./img/bloomberg@2x.png 2x" width="98" height="18" alt="Bloomberg">
                 </li>
