Add title class

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </ul>
         </section>
         <section class="main__faq faq">
-            <h2 class="faq__title">Frequently Asked Questions</h2>
+            <h2 class="faq__title title">Frequently Asked Questions</h2>
             <ul class="faq__items-list">
                 <li class="faq__item">
                     What type of memberships are offered?
@@ -150,7 +150,7 @@
             </ul>
         </section>
         <section class="main__members members">
-            <h2 class="members__title">
+            <h2 class="members__title title">
                 Join thousands of members gaining an edge with Digiday+
             </h2>
             <ul class="members__items-list">
