change faq accordions

--- a/index.html
+++ b/index.html
@@ -128,26 +128,50 @@
         </section>
         <section class="main__faq faq">
             <h2 class="faq__title title">Frequently Asked Questions</h2>
-            <ul class="faq__items-list">
-                <li class="faq__item">
-                    What type of memberships are offered?
-                </li>
-                <li class="faq__item">
-                    How can I obtain a plus membership receipt?
-                </li>
-                <li class="faq__item">
-                    How can I upgrade my membership?
-                </li>
-                <li class="faq__item">
-                    How do I access previous print magazines?
-                </li>
-                <li class="faq__item">
-                    What are the options for student memberships?
-                </li>
-                <li class="faq__item">
-                    What is our cancellation and refund policy? 
-                </li>
-            </ul>
+            <div class="faq__tabs-list">
+                <div class="faq__tab-item">
+                    <input type="checkbox" id="chck1">
+                    <label class="faq__tab-label" for="chck1">What type of memberships are offered?</label>
+                    <div class="faq__tab-content">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+                    </div>
+                  </div>
+                  <div class="faq__tab-item">
+                    <input type="checkbox" id="chck2">
+                    <label class="faq__tab-label" for="chck2">How can I obtain a plus membership receipt?</label>
+                    <div class="faq__tab-content">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+                    </div>
+                  </div>
+                  <div class="faq__tab-item">
+                    <input type="checkbox" id="chck3">
+                    <label class="faq__tab-label" for="chck3">How can I upgrade my membership?</label>
+                    <div class="faq__tab-content">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+                    </div>
+                  </div>
+                  <div class="faq__tab-item">
+                    <input type="checkbox" id="chck4">
+                    <label class="faq__tab-label" for="chck4">How do I access previous print magazines?</label>
+                    <div class="faq__tab-content">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+                    </div>
+                  </div>
+                  <div class="faq__tab-item">
+                    <input type="checkbox" id="chck5">
+                    <label class="faq__tab-label" for="chck5">What are the options for student memberships?</label>
+                    <div class="faq__tab-content">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+                    </div>
+                  </div>
+                  <div class="faq__tab-item">
+                    <input type="checkbox" id="chck6">
+                    <label class="faq__tab-label" for="chck6">What is our cancellation and refund policy? </label>
+                    <div class="faq__tab-content">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+                    </div>
+                  </div>
+            </div>
         </section>
         <section class="main__members members">
             <h2 class="members__title title">
