Add header__switch-radio class

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 Subscribe now to get unlimited access to our digital content.
             </h2>
                 <div class="header__switch">
-                    <input id="subscription-1" class="visually-hidden" type="radio" name="subscription" checked>
+                    <input id="subscription-1" class="header__switch-radio visually-hidden" type="radio" name="subscription" checked>
                     <label class="header__switch-button" for="subscription-1">
                         Individual membership
                     </label>
-                    <input id="subscription-2" class="visually-hidden" type="radio" name="subscription">
+                    <input id="subscription-2" class="header__switch-radio visually-hidden" type="radio" name="subscription">
                     <label class="header__switch-button" for="subscription-2">
                         group membership
                     </label>
